# prime_choi_sooyeon

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: modules.rst  prime_sc4815.rst
src/prime_sc4815/: __init__.py  prime_sc4815.py
tests/: test_prime_sc4815.py
