[tool.poetry]
name = "prime_sc4815"
version = "0.1.0"
description = "Python package for MDS_Fall2023"
authors = ["SooYeon Choi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
sphinxcontrib-napoleon = "^0.7"
myst-nb = "1.0.0rc0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
